--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
               </svg>
             
-            <form>
+            <form action>
                 <h2>Inserir Aluno</h2>
                 <input type="text" id="name" placeholder="Nome"/>
                 <input type="number" id="nota1" class="n" placeholder="Nota 1">
