--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
         </div>
 
-        <div class="modalForm" id="modalForm">
+        <div class="modalForm" action="" id="modalForm">
         
             <svg xmlns="http://www.w3.org/2000/svg" onclick="toggleModal('modalForm')" width="30" height="30" id="closeIcon" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
                 <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
