--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                  <button type="button" class="btn btn-primary">Excluir</button>
+                  <button type="button" id="btnExcluirAluno" class="btn btn-primary">Excluir</button>
                 </div>
               </div>
             </div>
