--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                     <th scope="col">Nota 2</th>
                     <th scope="col">Nota 3</th>
                     <th scope="col">Média</th>
+                    <th scope="col">Situação</th>
                     </tr>
                 </thead>
                 <tbody class="tbody">
