--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container" id="containerMain">
         <section id="table">
         <div class="table-responsive-sm">
-            <table class="table table-hover">
+            <table id="interior-table" class="table table-hover">
                 <thead>
                     <tr>
                     <th scope="col">Aluno</th>
