--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <th scope="col">Nota 3</th>
                     <th scope="col">Média</th>
                     <th scope="col">Situação</th>
+                    <th scope="col">Deletar</th>
                     </tr>
                 </thead>
                 <tbody class="tbody">
