--- a/index.html
+++ b/index.html
@@ -16,16 +16,13 @@
       function drawChart() {
         var data = google.visualization.arrayToDataTable([
           ['Task', 'Hours per Day'],
-          ['Work',     11],
-          ['Eat',      2],
-          ['Commute',  2],
-          ['Watch TV', 2],
-          ['Sleep',    7]
+          ['Aprovados',     11],
+          ['Reprovados',     11]
         ]);
 
         var options = {
-          title: 'My Daily Activities',
-          is3D: true,
+          title: 'Relação de aprovados e reprovados',
+          is3D: false,
         };
 
         var chart = new google.visualization.PieChart(document.getElementById('piechart_3d'));
