--- a/index.html
+++ b/index.html
@@ -10,6 +10,26 @@
     <title>Sistema Crud</title>
 
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
+      function carregarGrafico(aprovados, reprovados){
+     google.charts.load("current", {packages:["corechart"]});
+google.charts.setOnLoadCallback(drawChart);
+function drawChart(aprovados, reprovados) {
+  var data = google.visualization.arrayToDataTable([
+    ['Aprovados',     aprovados],
+    ['Reprovados',     reprovados]
+  ]);
+
+  var options = {
+    title: 'Relação de aprovados e reprovados',
+    is3D: false,
+  };
+
+  var chart = new google.visualization.PieChart(document.getElementById('piechart_3d'));
+  chart.draw(data, options);
+}
+}
+    </script>
 
 </head>
 <body>
