--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </div>
         </div>
 
-        <div id="container" style="width: 500px; height: 400px;"></div>
+        <div id="container" style="width: 500px; height: 400px; background-color: #252326;"></div>
 
     <script src="https://cdn.anychart.com/releases/8.11.0/js/anychart-core.min.js"></script>
     <script src="https://cdn.anychart.com/releases/8.11.0/js/anychart-pie.min.js"></script>
